# okta-mcp-em-python

./: .env.example  .gitignore  BLOG.md  CHANGELOG.md  LICENSE  OKTA_API_REFERENCE.md  QUICK_REFERENCE.md  README.md  batch.py  client.py  pyproject.toml  requirements.txt  run_grants.py  s3_client.py  server.py
csv/: sample_medium_denormalized.csv  sample_permission_creep.csv  sample_small_baseline.csv
csv/csv-files/: audit_rbac_10_extreme_denormalization.csv  audit_rbac_1_small_baseline.csv  audit_rbac_2_medium_denormalized.csv  audit_rbac_3_large_orphaned_creep.csv  audit_rbac_4_mixed_inconsistent_assignment.csv  audit_rbac_5_anomaly_dirty_data.csv  audit_rbac_6_temporal_expired_access.csv  audit_rbac_7_complex_sod.csv  audit_rbac_8_group_access_unused_perms.csv  audit_rbac_9_logging_gaps.csv
tools/: __init__.py  api.py  app_knowledge.py  basic.py  batch.py  bundle.py  governance.py  menu.py  sod.py  workflow.py
