[project]
name = "okta-mcp-em-python"
version = "6.0.0"
description = "MCP Server for Okta Entitlements & Grants"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "boto3>=1.34.0"
]

[project.scripts]
okta-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
